# qa-challenge-202504

./: .gitignore  package-lock.json  package.json  readme.md  requirements.txt  task1.bat
task1/: generate_pyramid.py  pyproject.toml  readme.md  test_generate_pyramid.py
task1/tests/: test_generate_pyramid.py
task2/: pyproject.toml  readme.md
task2/tests/: test_appium_main.py
task3/: pyproject.toml  readme.md
task3/tests/: get_url.py  test_verify_high_low.py  test_verify_response.py
